# backend

./: .gitignore  .pdm-python  README.md  pyproject.toml
app/: main.py
app/api/: routes.py  small.hl7
app/data/: important_notes.txt  messages_redacted.txt
app/src/: classes.py  constants.py  deidentify.py  main.py  parsing.py  utils.py
data/: tables.txt
