[project]
name = "HCA-backend"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Josh Daugherty",email = "joshmd00@gmail.com"},
]
dependencies = ["hl7>=0.3.4", "hl7apy>=1.3.5", "fastapi[all]>=0.115.12", "uvicorn>=0.34.0", "plotly>=6.0.1", "dash>=3.0.1", "httpx>=0.28.1"]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
distribution = false

[tool.pdm.scripts]
dev = "uvicorn app.src.main:app --reload"